resolved grid overflow issue

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -90,8 +90,6 @@ options and card sections
 .options-and-card-section {
     display: flex;
     margin: 10%;
-    margin-bottom: 20%;
-
 }
 
 .options-div {
@@ -163,7 +161,7 @@ options and card sections
     grid-template-columns: repeat(3, 1fr);
     gap: 3%;
     width: 100%;
-    overflow: scroll;
+    margin-bottom: 0%;
     padding-bottom: 10%;
 
 }
@@ -186,6 +184,7 @@ Start: blog-card */
 
 .card-info {
     padding: 5% 5%;
+    /* width: 100%; */
 }
 
 .card-info a {
@@ -211,7 +210,12 @@ Start: blog-card */
     line-height: 27px;
     color: #161616;
     margin-bottom: 15px;
+    /* width: 100%; */
 
+}
+
+.clock-comments {
+    width: 100%;
 }
 
 .time-comment {
@@ -256,6 +260,8 @@ Start: blog-card */
 .anchor-div {
     width: 100%;
     text-align: center;
+    margin-top: 5%;
+    display: none;
 }
 
 .view-all-anchor {
@@ -272,6 +278,7 @@ Start: blog-card */
     text-align: center;
     color: #FFFFFF;
     margin-bottom: 5%;
+    display: none;
 }
 
 /* End of Blog Card design
@@ -367,7 +374,6 @@ footer {
     }
 
     .half-width {
-
         width: 100%;
     }
 
@@ -389,26 +395,25 @@ footer {
 
     }
 
-    /*End of Header/Banner section media Query 
+    /*End of Header/Banner section media Query for mobile
     ----------------------------------------------------------- */
 
     /* ---------------------------------------------------------
-        Start Of blog section media query  ⬇️
+        Start Of blog section media query for mobile  ⬇️
      ------------------------------------------------------------*/
-    .grid-parent-div {
-        margin-bottom: 50%;
-    }
 
     .options-and-card-section {
         flex-direction: column;
-        margin: 0 5%;
         justify-content: center;
         align-items: center;
+        margin: 5%;
+        margin-bottom: 0;
     }
 
     .options-div {
         height: 236px;
-        padding: 30px;
+        /* padding: 0 30px; */
+        padding-top: 15px;
         background: transparent;
         border-radius: 10px;
         margin-right: 0;
@@ -450,14 +455,19 @@ footer {
 
     }
 
+    .blog-card {
+        margin-bottom: 5%;
+    }
+
     /* changing grid to one column */
     .card-grid-container {
         grid-template-columns: repeat(1, 1fr);
-        gap: 1%;
-        width: 100%;
-        height: 100%;
-
+        gap: 1em;
+        /* overflow-y: scroll; */
+        padding: 0 5px;
+        /* padding-bottom: 70%; */
     }
+
 
 }
 
@@ -512,11 +522,6 @@ footer {
     -------------------------------- */
 
     /* start of blog-card section */
-    .card-grid-container {
-        margin-bottom: 5%;
-        padding-bottom: 20%;
-    }
-
     .options-and-card-section {
         flex-direction: column;
         margin: 0 5%;
@@ -559,11 +564,31 @@ footer {
     /* changing grid layout to 2 coloumn */
     .card-grid-container {
         grid-template-columns: repeat(2, 1fr);
+        /* overflow: hidden; */
+        gap: 1em;
+        padding: 0 5px;
+        /* padding-bottom: 30%; */
+        /* grid-auto-flow: column dense; */
+        /* z-index: -5; */
+
     }
 
     /* view-all anchor tag showing */
+    .anchor-div {
+        display: flex;
+        /* background-color: #FFFFFF; */
+        width: 100%;
+        margin-right: 0;
+        margin-left: 0;
+        text-align: center;
+        justify-content: center;
+        align-items: center;
+
+    }
+
     .view-all-anchor {
         display: inline-block;
+
     }
 
 }
